--- a/PortFolion/PortFolion/Views/GraphTab.xaml
+++ b/PortFolion/PortFolion/Views/GraphTab.xaml
@@ -188,15 +188,15 @@
                         <TextBlock Text="{Binding CurrentDate,StringFormat=yyyy/M/d}"/>
                         <TextBlock Text="{Binding CurrentNode.Name}"/>
                     </StackPanel>
-                    <Button x:Name="BdParams" DockPanel.Dock="Right" HorizontalAlignment="Right"
+                    <!--<Button x:Name="BdParams" DockPanel.Dock="Right" HorizontalAlignment="Right"
                                   Content="{iconPacks:PackIconMaterial Kind=Settings}" VerticalAlignment="Top">
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="Click">
                                 <ei:CallMethodAction TargetObject="{Binding}" MethodName="EnableBrakeDownParams"/>
-                                <!--<ei:ChangePropertyAction TargetName="SandP" PropertyName="IsExpanded" Value="True"/>-->
+                                --><!--<ei:ChangePropertyAction TargetName="SandP" PropertyName="IsExpanded" Value="True"/>--><!--
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
-                    </Button>
+                    </Button>-->
                 </DockPanel>
                 <lvc:PieChart Grid.Row="1" x:Name="Pie" Series="{Binding BrakeDown}" StartingRotationAngle="90" 
                               MinHeight="200" MinWidth="200" Width="300" Height="280" LegendLocation="None" Margin="15,0,15,3">
@@ -233,7 +233,40 @@
             </Grid>
         </Expander>
 
-        <StackPanel Grid.Column="3" Orientation="Vertical">
+        <GroupBox Grid.Column="3" Header="推移" Margin="0">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <Expander IsEnabled="True" Grid.Column="1" ExpandDirection="Left" Margin="5,-5,-5,-5">
+                    <Expander.Header>
+                        <TextBlock Text="Menu" TextAlignment="Left">
+                            <TextBlock.LayoutTransform>
+                                <RotateTransform Angle="90"/>
+                            </TextBlock.LayoutTransform>
+                        </TextBlock>
+                    </Expander.Header>
+                    <ScrollViewer VerticalScrollBarVisibility="Auto">
+                        <StackPanel Orientation="Vertical">
+                            <ToggleButton Content="残高＆CF"/>
+                            <ToggleButton Content="残高＆累積CF"/>
+                            <ToggleButton Content="損益"/>
+                            <ToggleButton Content="比率推移"/>
+                            <ToggleButton Content="内訳推移"/>
+                            <ToggleButton Content="指数"/>
+                            <ToggleButton Content="変動率"/>
+                        </StackPanel>
+                    </ScrollViewer>
+                </Expander>
+                <ScrollViewer Grid.Column="0" Margin="0" VerticalScrollBarVisibility="Auto">
+                    <StackPanel Orientation="Vertical" VerticalAlignment="Bottom">
+
+                    </StackPanel>
+                </ScrollViewer>
+            </Grid>
+        </GroupBox>
+        <!--<StackPanel Grid.Column="3" Orientation="Vertical">
             <Expander ExpandDirection="Down" Header="推移" mah:ControlsHelper.ContentCharacterCasing="Normal">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -244,7 +277,7 @@
                         <lvc:CartesianChart.DataTooltip>
                             <lvc:DefaultTooltip Background="Black" Opacity="0.7"/>
                         </lvc:CartesianChart.DataTooltip>
-                        <lvc:CartesianChart.AxisX><!---->
+                        <lvc:CartesianChart.AxisX>--><!----><!--
                             <lvc:Axis MinRange="2" Labels="{Binding Transition.Labels}" RangeChangedCommand="{Binding Transition.RangeChangedCmd}" Position="LeftBottom"
                                       MinValue="{Binding Transition.DisplayMinValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}"
                                       MaxValue="{Binding Transition.DisplayMaxValue,UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}">
@@ -286,7 +319,7 @@
             <Expander ExpandDirection="Down" Header="変動率" mah:ControlsHelper.ContentCharacterCasing="Normal">
             </Expander>
             
-        </StackPanel>
+        </StackPanel>-->
         
     </Grid>
 </UserControl>
